--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,8 +58,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
-    "test": "craco test"
+    "build": "npm run generate-sitemap && craco build",
+    "test": "craco test",
+    "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "browserslist": {
     "production": [
