--- a/mevoq-nextjs/package.json
+++ b/mevoq-nextjs/package.json
@@ -52,11 +52,11 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.35.0",
-    "lucide-react": "^0.562.0",
-    "next": "15.1.9",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.6",
     "next-sitemap": "^4.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.0",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
@@ -66,9 +66,10 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
-    "eslint-config-next": "15.1.9",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
